--- a/bios.html
+++ b/bios.html
@@ -14,7 +14,7 @@
 
 <h3>Brian Geyer</h3>
 
-<p>Brian Geyer is a graduate student in the sociocultural (<a href="http://anthropology.msu.edu">anthropology program at Michigan State University</a>) (MSU) and a Foreign Languages and Area Studies (FLAS) Fellow in Michigan State University's <a href="http://africa.isp.msu.edu/">African Studies Center</a>. He earned his first Bachelor's degree at Washington State University in Music in 2008, with a second in Anthropology in 2009. Prior to attending Michigan State, Brian served as a public health Peace Corps Volunteer in Kenya, where he learned his love for indigenous studies while living among a rural Maasai population. Upon completion of his doctorate, he hopes to join a research university faculty and continue his research on topics of power structures, inequality, and ecotourism.</p>
+<p>Brian Geyer is a graduate student in the sociocultural <a href="http://anthropology.msu.edu">anthropology program at Michigan State University</a> (MSU) and a Foreign Languages and Area Studies (FLAS) Fellow in Michigan State University's <a href="http://africa.isp.msu.edu/">African Studies Center</a>. He earned his first Bachelor's degree at Washington State University in Music in 2008, with a second in Anthropology in 2009. Prior to attending Michigan State, Brian served as a public health Peace Corps Volunteer in Kenya, where he learned his love for indigenous studies while living among a rural Maasai population. Upon completion of his doctorate, he hopes to join a research university faculty and continue his research on topics of power structures, inequality, and ecotourism.</p>
 
 </body>
 </html>
